# regit-blacksholes

./: .gitignore  CHANGELOG.md  Cargo.toml  MATH.md  README.md  SECURITY.md  deny.toml  justfile
.claude/: settings.local.json
benches/: blackscholes.rs
examples/: quickstart.rs
src/: errors.rs  greeks.rs  iv.rs  lib.rs  math.rs  types.rs
src/models/: bachelier.rs  black76.rs  black_scholes.rs  displaced.rs  mod.rs
tests/: integration.rs
